# Webserver

./: .gitignore  CMakeLists.txt  Makefile  README.md  Test-0  eval_commands.txt  eval_sheet_issues.txt  functions.txt  key.sh  main.cpp  simpleTestServer.py  steps.txt  test  test.c  todo.txt
assets/: config.conf  config_example.conf
config/: config_example.conf  test.conf
include/: Client.h  Config.h  Config.hpp  ParseConfig.h  Path.h  Request.h  Response.h  Server.h  ServerBlock.h  ServerControl.h  Settings.h  utils.h  webserv.hpp
include/Config/: Config.hpp  Location.hpp  Server.hpp
notes/: Settings_checks.txt
public/: empty.html  index.html  index.php  redirect.html  upload.cpp
public/cgi/: bla.php  index.php
public/cgi/post/: test.php
public/error/: 204.html  307.html  400.html  401.html  403.html  404.html  405.html  408.html  413.html  414.html  500.html  503.html  504.html  505.html  index.html  index1.html  index2.html
public/test/: index.html
public/upload/: 2key.sh  2test  index.html  index1.html  key1.sh  upload.php
src/: CgiResponse.cpp  Client.cpp  Config.cpp  FileHandling.cpp  ListDirectories.cpp  Location.cpp  MimeTypes.cpp  ParseConfig.cpp  ParseConfigUtil.cpp  ParseVariables.cpp  Path.cpp  Request.cpp  Response.cpp  ResponseDirectory.cpp  ResponseUploadDelete.cpp  Server.cpp  ServerBlock.cpp  ServerControl.cpp  Settings.cpp  delete.cpp  main.cpp  upload.cpp  utils.cpp
src/Config/: Config.cpp  Location.cpp  Server.cpp
